<resources>
    <string name="app_name">CrudTeste</string>
    <string name="ano_lancamento">Ano Lançamento:</string>
    <string name="preco">Preço:</string>
    <string name="cadastro_de_fita">Cadastro de Fita</string>
    <string name="_000">0</string>
    <string name="titulo">Título:</string>
    <string name="id">Id:</string>
    <string name="tituloEd">Título</string>
    <string name="ano">Ano</string>
    <string name="precoEd">Preço</string>
    <string name="excluir">Excluir</string>
    <string name="pesquisar_titulo">Pesquisar Titulo</string>
    <string name="cadastrar_nova_fita">Cadastrar Fita</string>
    <string name="listar_todas">Listar Todas</string>
    <string name="alterar">Alterar</string>
    <string name="entre_com_o_titulo">Entre com o titulo</string>
    <string name="locadora_de_fitas">Locadora de Fitas</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="cadastrar_locacao_de_fita">Cadastrar Locação de Fita</string>
    <string name="cadastrar_fita">Cadastrar Fita</string>
    <string name="fita">Fita</string>
    <string name="informacoes_da_tabela">informações da tabela</string>
    <string name="titulo_informacoes_tabela">Informações da Tabela:</string>
    <string name="cadastro_de_locacao">Cadastro de Locação</string>
    <string name="nome_cliente_locacao">Nome do Cliente:</string>
    <string name="nome_fita_locacao">Nome da Fita:</string>
    <string name="nome_da_fita_locacao_ed">Nome da Fita</string>
    <string name="cadastrar_locacao_bt">Cadastrar Locação</string>
    <string name="listar_locacoes_bt">Listar Locações</string>
    <string name="nome_do_cliente_locacao">Nome do Cliente</string>
    <string name="cadastro_de_cliente">Cadastro de Cliente</string>
    <string name="tv_nome_cliente">Nome:</string>
    <string name="tv_idade_cliente">Idade:</string>
    <string name="tv_digite_o_nome">Digite o nome</string>
    <string name="ed_digite_a_idade">Digite a idade</string>
    <string name="bt_cadastrar_cliente">Cadastrar</string>
    <string name="listar_clientes">Listar Clientes</string>
</resources>
